# gatehouse

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  MIGRATION.md  README.md  package.json
.github/workflows/: ci.yml
benches/: README.md  permission_checker.rs
examples/: actix_web.rs  axum.rs  combinator_policy.rs  delegating_policy.rs  deny_override.rs  factsource_n_plus_one.rs  groups_policy.rs  in_ram_rebac.rs  list_scope_two_checkers.rs  lookup_in_ram.rs  mfa_freshness_context.rs  pg18_bulk_rebac.rs  policy_builder.rs  postgres_bulk_rebac.rs  rbac_policy.rs  rebac_policy.rs
src/: builder.rs  checker.rs  combinators.rs  facts.rs  lib.rs  lookup.rs  metadata.rs  policy.rs  results.rs  session.rs  tests.rs  tests.rs.bak
src/policies/: abac.rs  delegating.rs  mod.rs  rbac.rs  rebac.rs
src/session/: core.rs  mod.rs
tests/: actix_example.rs  axum_example.rs  checker_contract.rs  lookup_contract.rs  session_contract.rs  tracing_contract.rs
