[package]
name = "gatehouse"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/thepartly/gatehouse"
description = "A flexible authorization library that combines role-based (RBAC), attribute-based (ABAC), and relationship-based (ReBAC) access control policies."

[dependencies]
tracing = "0.1"
uuid = {version="1", features = ["serde", "v4"]}
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
axum = "0.8"
tower = "0.5"
hyper = "1"

[[example]]
name = "axum"
doc-scrape-examples = true

[package.metadata.docs.rs]
# Scape examples from the documentation.
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

# We want to document all features.
all-features = true
