[package]
name = "gatehouse"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/thepartly/gatehouse"
description = "An in-process authorization engine for Rust with composable policies and request-scoped fact loading."

[dependencies]
tracing = "0.1"
uuid = {version="1", features = ["serde", "v4"]}
async-trait = "0.1"
futures-channel = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
axum = "0.8"
tower = "0.5"
hyper = "1"
actix-web = "4"
criterion = { version = "0.8" }
dashmap = "6"
proptest = "1"
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }

[[bench]]
name = "permission_checker"
harness = false

[[example]]
name = "axum"
doc-scrape-examples = true

[[example]]
name = "actix_web"
doc-scrape-examples = true

[package.metadata.docs.rs]
# Scrape examples from the documentation.
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

# We want to document all features.
all-features = true
